@@ -1,4 +1,9 @@
 
+2018-04-09  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* tree.c (cb_field_size): report ANY LENGTH items as "unknown size",
+	  fixing Bug #511
+
 2018-04-04  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* codegen.c: cosmetic change - label exit_program/exit_function
